--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Quicksand:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap');
 
 .App {
   text-align: center;
@@ -42,7 +43,7 @@
 header {
   display: flex;
   justify-content: space-between;
-  background-color: #b2afff;
+  background-color: #ABC9FF;
   padding: 20px;
 }
 
@@ -69,6 +70,7 @@ header {
   font-family: 'Concert One', cursive;
   color: #ffffff;
   text-decoration: none;
+  font-size: 18px;
 }
 
 .navigation-bar li:hover ul {
@@ -88,7 +90,7 @@ header {
 
 .item-book, .item-magazine{
   padding: 15px;
-  background-color: #b2afff;
+  background-color: #ABC9FF;
   list-style: none;
   text-decoration: none;
   position: absolute;
@@ -96,7 +98,7 @@ header {
 }
 
 .item:hover{
-  background-color: #9b95ff;
+  background-color: #85b0ff;
 }
 
 .shopping-cart {
@@ -125,4 +127,91 @@ header {
   width: 250px;
   max-width: 100%;  
   margin-left: 80px;
+}
+
+.card-products{
+  font-family: Quicksand;
+  list-style: none;
+  text-decoration: none;
+  display: grid;
+  grid-template-columns: 300px 300px 300px 300px;
+  grid-template-rows: 350px 350px;
+  justify-content: center;
+  grid-gap: 1em;
+  height: 800px;
+  padding: 2em;
+}
+
+.item-card{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.button-details{
+  font-family: Quicksand;
+  padding: 6px;
+  margin: 10px 20px 10px 20px ;
+  border: solid 1px#FF8B8B;
+  border-radius: 8px;
+}
+
+.add-cart{
+  font-family: Quicksand;
+  padding: 6px;
+  border: none;
+  display:flex;
+  margin: 0px 20px 10px 20px ;
+  background-color: #FF8B8B;
+  border-radius: 8px;
+}
+
+.img-products{
+  margin-top: 10px;
+  object-fit: cover;
+  width: 40%;
+}
+
+.img-details-products{
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+.title-products{
+  margin-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 14px;
+}
+
+.title-details-products{
+  font-family: Quicksand;
+  margin: 30px 0px 20px 30px;
+}
+
+.price-products{
+  color: #EB4747;
+  font-weight: 700;
+  margin-top: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 14px;
+}
+
+.price-details-products{
+  font-family: Quicksand;
+  margin: 10px 0px 20px 30px;
+  color: #EB4747;
+  font-weight: 700;
+}
+
+.title-results{
+  margin-top: 50px;
+  font-family: Quicksand;
+  color: #2b2b2b;
+  text-align: center;
+}
+
+.description-products{
+  font-family: Quicksand;
+  margin: 10px 0px 20px 30px;
 }
